# gymize

./: .gitignore  LICENSE  README.md  location.bnf  locator.bnf  marenv_field_mapping.bnf
proto/: README.md  gen.py
proto/definitions/: channel.proto  gymize.proto  locator.proto  recording.proto  render.proto  signaling.proto  space.proto
python/: agent.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  ws_server.py
python/gymize/: __init__.py  bridge.py  channel.py  lanch.py  signaling.py  space.py
python/gymize/envs/: __init__.py  unity.py  unity_aec_env.py  unity_gym_env.py  unity_parallel_env.py
python/gymize/proto/: channel_pb2.py  gymize_pb2.py  locator_pb2.py  recording_pb2.py  signaling_pb2.py  space_pb2.py
python/proto/: space_pb2.py
python/src/gymize/: __init__.py  bridge.py  channel.py  lanch.py  render.py  signaling.py
python/src/gymize/envs/: __init__.py  unity_aec_env.py  unity_gym_env.py  unity_parallel_env.py
python/src/gymize/proto/: channel_pb2.py  gymize_pb2.py  render_pb2.py
python/tests/: .gitignore  ask.py  ask_sync.py  channel.py  gym.py  signal.py  test.ipynb  test_aec.py  test_agent_instance.py  test_agent_selector.py  test_ask.py  test_ask_sync.py  test_bridge.py  test_channel.py  test_gym.py  test_kart.py  test_obs.py  test_signal.py  test_ws_server.py  testgym.py  ws_server.py
unity/: package.json
unity/Runtime/: Agent.cs  GymChannel.cs  GymEnv.cs  GymManager.cs  Gymize.cs  GymizeManager.cs  Marenv.cs  MarenvManager.cs  PAIA.Gymize.asmdef  PAIA.Marenv.asmdef  TestAgent.cs  TestSpace.cs
(+137 files in other folders)
