[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gymize"
version = "0.0.1"
authors = [
    { name="timcsy", email="timocsy@yahoo.com.tw" },
]
description = "Unity and Python Reinforcement and Imitation Learning with Gymnasium and PettingZoo API."
readme = "../README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "gymnasium>=0.28",
    "pettingzoo>=1.23",
    "websockets==10.1",
    "protobuf>=3.18",
]

[project.urls]
"Homepage" = "https://github.com/timcsy/gymize"
"Bug Tracker" = "https://github.com/timcsy/gymize/issues"

[project.scripts]
gymize-signaling = "gymize:signaling.main"